--- a/src/components/css/Login.css
+++ b/src/components/css/Login.css
@@ -1,4 +1,12 @@
+.Login {
+  text-align: center;
+}
 
+h1 {
+  text-align: center;
+  margin-top: 50px;
+  font-size: 50px;
+}
 form {
     text-align: center;
     margin-top: 50px;
@@ -11,23 +19,19 @@ label {
     font-weight: bold;
 }
 
-
-
 input[name="userName"] {
     width: 150px;
     margin-bottom: 20px;
-    background-color:yellow;
-  }
+}
 
 input[name="password"] {
     width: 150px;
     margin-bottom: 20px;
     margin-left: 10px;
-    background-color: yellow;
-  }
+}
   
 button {
-    margin-left: 100px;
+    margin-left: 210px;
     padding: 3px 5px 3px 5px;
     font-weight: bold;
 }
