--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.homeNav {
+  font-size: large;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.Credits {
+  text-align: center;
+}
